--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
     --bg-color-hsl: 0, 0%, 100%;
     background-color: hsla(var(--bg-color-hsl), 1);
     border-radius: var(--brd-radius);
-    box-shadow: 40px 60px 50px -47px hsla(var(--bg-color-hsl), .25);
+    box-shadow: 2.5rem 3.75rem 3.125rem -2.9rem hsla(var(--bg-color-hsl), .3);
 }
 
 .testimonial-card:nth-of-type(1) {
